<resources>
    <string name="app_name">KBC Game</string>
    <string name="app_name_full">Kaun Banega Crorepati</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="wrongans">Oops! Your answer is wrong</string>

    <string name="questionfinsh">Oops! no more questions</string>
    <string name="right_ans">Congratulations \n your answer is correct! </string>

    <string name="winner">Winner \n you gave all answers correctly</string>
    <string name="gotpoint">You won Rupee</string>
    <string name="yougot">You won </string>

    <string name="replay">Replay</string>
    <string name="tap">Selected answer is wrong please choose next answer</string>
    <string name="point"> Rupee</string>

    <string name="timeover">TIMER OVER!</string>
    <string name="sure">Are you sure?</string>
    <string name="optionuse">Option is already used !</string>

</resources>
