<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black_overlay"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<LinearLayout
    android:layout_marginTop="26dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/yes"
        android:id="@+id/iv_yes"
        android:background="@drawable/kbg_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:background="@drawable/kbg_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/no"
        android:gravity="center"
        android:id="@+id/iv_no"
        android:layout_width="160dp"
        android:layout_height="60dp"
        tools:ignore="ContentDescription" />
</LinearLayout>


</LinearLayout>