<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="right"
    android:background="@color/black_overlay"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_close"
        android:src="@drawable/close"
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/wrongans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_point"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/gotpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/replay"
        android:id="@+id/iv_play"
        android:layout_marginTop="24dp"
        android:background="@drawable/kbg_button"
        android:layout_marginLeft="260dp"
        android:layout_marginRight="260dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

</LinearLayout>